2022-05-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/libs/libgroff/fontfile.cpp (font::open_file): Refactor.
	Move more logic, including memory allocation, inside conditional
	that accepts only file names without '/' characters, skipping
	unnecessary work in the alternative.  Annotate use of zero
	literals as null pointers to ease any future migration to ISO
	C++11.  Add 'const' qualifier to variable that doesn't require
	modification (and which is used in the LHS of an equality
	comparison, so that clumsy operator misuse will provoke a
	compiler warning).

	Fixes <https://savannah.gnu.org/bugs/?62532>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: In configuration report, say that we're
	reporting compiler options along with the compiler executable.
	Fix leftover test(1) comparison with garbage, overlooked in
	commit faa22d89d2, 20 May.

2022-05-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (doc/meintro_fr.ps): Build with '-t' option.

	Fixes <https://savannah.gnu.org/bugs/?62542>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.1.man (Options) <-l>: Handle case where
	no default print spooler is configured, and report formatter
	behavior correctly if it isn't.

	Fixes <https://savannah.gnu.org/bugs/?62535>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* Makefile.am (.man): Process '@PSPRINT@' substitutions with
	"makevarescape.sed".

2022-05-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PROG_YACC, GROFF_MAKEINFO, GROFF_TEXI2DVI):
	Fix logic error in detection of build scenario: the presence of
	a ".git" directory is not an indicator that we're not building
	from a distribution archive, because we might be building from a